# frames-lab

./: CMakeLists.txt
app/: frames.cpp
include/: Felidae.hpp
include/felinae/: Felinae.hpp
include/felinae/felis/: Felis.hpp
include/felinae/felis/felis_silvestris/: FelisSilvestris.hpp  FelisSilvestrisBieti.hpp
include/felinae/felis/felis_silvestris/catus/: FelisSilvestrisCatus.hpp  FelisSilvestrisCatusDetrimental.hpp  PerfectFelisSilvestrisCatus.hpp
include/pantherinae/: Pantherinae.hpp
include/pantherinae/cloudedLeopards/: CloudedLeopard.hpp  CloudedLeopards.hpp
include/pantherinae/panthers/: Panthers.hpp
include/pantherinae/panthers/lion/: Lion.hpp
include/pantherinae/panthers/tiger/: Tiger.hpp
src/: CMakeLists.txt  Felidae.cpp
src/felinae/: Felinae.cpp
src/felinae/felis/: Felis.cpp
src/felinae/felis/felis_silvestris/: FelisSilvestris.cpp  FelisSilvestrisBieti.cpp
src/felinae/felis/felis_silvestris/catus/: FelisSilvestrisCatus.cpp  FelisSilvestrisCatusDetrimental.cpp  PerfectFelisSilvestrisCatus.cpp
src/pantherinae/: Pantherinae.cpp
src/pantherinae/cloudedLeopards/: CloudedLeopard.cpp  CloudedLeopards.cpp
src/pantherinae/panthers/: Panthers.cpp
src/pantherinae/panthers/lion/: Lion.cpp
src/pantherinae/panthers/tiger/: Tiger.cpp
